# Aero

./: .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  environment.yml  requirements.txt
.claude/: settings.local.json
AI/: pyproject.toml
AI/.devcontainer/: devcontainer.json
AI/docker/: Dockerfile  entrypoint.sh
AI/docs/: ARUCO_NODE.md  CAMERA_FEED.md  LANDING_NODE.md  ROS2_INTRO.md
AI/install/: local_setup.sh  setup.sh
AI/src/camera_feed/: package.xml  setup.py
AI/src/camera_feed/camera_feed/: aruco_node.py  camera_node.py  landing_node.py
AI/src/camera_feed/launch/: precision_landing.launch.py
Code/Callibration/: 1_capture_images.py  2_calibrate.py  3_aruco_test.py  apriltag_detect.py  aruco_detect.py  calibration.npz
Code/Communication/: mav_test.py
Simulation/: .dockerignore  .env.example  README.md  SETUP_UBUNTU.md  SETUP_WINDOWS.md  Tutorial.md  config.py  connection_test.py  docker-compose.yml  launch_sim.sh  pyproject.toml  requirements.txt  sim.py
Simulation/.devcontainer/: devcontainer.json
Simulation/algorithms/: __init__.py  auto_land.py  camera_feed.py  tag_detector.py  tag_patrol.py  takeoff_land.py
Simulation/docker/: Dockerfile  entrypoint.sh  setup.sh
Simulation/docs/: README.md  RUNNING_SIMULATION.md  SETUP_DOCKER.md  SETUP_UBUNTU.md  SETUP_WINDOWS.md  Tutorial.md
Simulation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Simulation/log/: latest_build
docs/: PRECISION_LANDING.md  ROS_System_Architecture.md  SETUP_DOCKER.md  WORKING_IN_CONTAINERS.md
tmp/: sim_state.json
(+59 files in other folders)
